--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@ a {
     width: 100%;
     background-color: #fff;
     height: 50px;
-    justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0;
@@ -62,20 +61,15 @@ a {
     padding-right: calc(60 / 1080 * 100%);
 }
 .header .container {
-  display: flex;
-  align-items: center;
-  height: 50px;
-  width: 100%;
-  justify-content: space-between; 
-  gap: clamp(16px, 4vw, 56px);
+    display: flex;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    justify-content: space-between; 
+    gap: clamp(40px, 4vw, 56px);
 }
 .header-icon {
     width: 25.49px; 
-}
-.header-icon:hover {
-    color: #505050; 
-    opacity: 0.5; 
-    transition: color 0.5s ease, opacity 0.5s ease;
 }
 .title {
     font-size: 1.8rem;
@@ -83,8 +77,9 @@ a {
     cursor: pointer; 
     line-height: 1.83;
     column-gap: 8px;
+    margin-right: 40px;
 }
-.title a:hover {
+.title:hover {
     color: #505050; 
     opacity: 0.5; 
     transition: color 0.5s ease, opacity 0.5s ease;
@@ -110,13 +105,10 @@ a {
 .nav_list {
     display: flex;
     align-items: center;
-    list-style: none;
     line-height: 2.35;
     font-weight: 700;
     height: 100%;
     font-size: 1.4rem;
-    padding: 0;
-    margin: 0;
 }
 .header_nav li:not(:first-of-type) {
     margin-left: 10px;
@@ -133,10 +125,7 @@ a {
 }
 .fv_image {
     line-height: 0;
-}
-.fv_image picture,
-.fv_image img {
-    max-width: 100%; 
+    max-width: 100%;
 }
 .main_copy {
     background-color: rgba(255,255,255,0.7);
@@ -187,16 +176,13 @@ a {
 .message p {
     text-align: center;
     font-size: 1.8rem;
-    color: #505050; 
     line-height: 1.83;
     font-weight: 500;
 }
 .message img {
-    width: 83.75px;
     position: absolute;
     right:  76.24px;
     bottom: 33.88px;
-    display: block;
 }
 #strengths {
     padding: 64px 0 68px;
@@ -240,6 +226,7 @@ a {
 .strengths-sec-item_title h4 {
     font-size: 2.2rem;
     line-height: 1.5;
+    font-weight: 700;
 }
 .strengths-sec-item_text {
     margin-top: 19px;
@@ -256,11 +243,6 @@ a {
 .strengths-sec-item_image picture {
     display: block;  
     width: 100%;
-}
-.strengths-sec-item_image picture img {  
-    height: auto;     
-    max-width: 440px; 
-    margin: 0 auto;  
 }
 #service {
     padding: 63px 0 59px;
@@ -319,10 +301,6 @@ a {
     display: block;
     line-height: 0;
 }
-.service-content img {
-    width: auto;
-    max-width: 100%;
-}
 #news {
     padding: 63px 0 68px;
     width: 100%;
@@ -349,8 +327,6 @@ a {
 }
 .news-list {
     list-style: none;
-    padding: 0;
-    margin: 0; 
     border-top: 1px solid #707070;   
 }
 .news-item  {
@@ -361,16 +337,14 @@ a {
 .news-item a {
     display: grid;
     grid-template-columns: 92px 185px 1fr; 
-    align-items: center;
     gap: 0;
     line-height: 1.6;
     padding: 15px 18.5px;
 }
-.news-item a :hover {
+.news-item :hover {
     color: #505050; 
     opacity: 0.5; 
     transition: color 0.5s ease, opacity 0.5s ease;
-
 }
 .news-date {
     width: 92px;
@@ -390,7 +364,6 @@ a {
 }
 .news-text,
 .news-text2 {
-    color: #505050;
     font-weight: 500;
     margin-top: 0;
     margin-right: 0;
@@ -458,6 +431,8 @@ a {
     line-height: 1.5;
     font-size: 1.8rem;
     color: #505050;
+    font-weight: 700;
+
 }
 .access-sec-item_tel a {
     font-size: 2.5rem;
@@ -516,16 +491,13 @@ a {
     justify-content: center;
 }
 .contact-with-images h2 {
-    margin: 0;
     font-size: 2.5rem;
     font-weight: 700;
     line-height: 1.44;
-    top: -2px;
 }
 .contact-with-images .images-icon {
     width: 25.49px;
     height: 25px;
-    top: 5px;
 }
 .desc {
     margin-top: 25px;
@@ -533,7 +505,6 @@ a {
 .section-desc {
     font-size: 1.7rem;
     font-weight: 500;
-    color: #505050;
     line-height: 1.76;
     margin: 0 auto;
     text-align: center;
@@ -566,6 +537,7 @@ input[type="email"] {
     margin-inline: auto;
     margin-bottom: 30px;
     outline: none;
+    background-color: #fff;
 }
 textarea {
     width: 100%;
@@ -576,6 +548,7 @@ textarea {
     outline: none;
     font-size: 1.6rem;
     padding: 10px 15px;
+    background-color: #fff;
 }
 .contact_button {
     margin-top: 50px;
@@ -599,6 +572,7 @@ input[type="submit"] {
     font-family: "Noto Sans JP",sans-serif;
     font-weight: 700;
     line-height: 1.32;
+    text-align: center;
 }
 input[type="submit"]:hover {
     color: #0D96A0;
@@ -620,8 +594,6 @@ input[type="submit"]:hover {
     border-bottom: 1px solid #ffffff;
     width: 100%;
     justify-content: center;
-    margin: 0;
-    padding: 0;
     padding-bottom: 21px;
 }
 .footer-nav_list {
@@ -660,9 +632,6 @@ input[type="submit"]:hover {
 }
 .footer_sns a {
     color: white;
-    text-decoration: none;
-    display: flex;
-    transition: opacity 0.3s ease;
 }
 .footer_sns a:hover {
     opacity: 0.7;
@@ -692,10 +661,6 @@ input[type="submit"]:hover {
         width: 100%;
         max-width: 100%;
     }
-    .strengths-sec-item_image picture img {
-        width: 100%;
-        max-width: 100%;
-    }
     .address-text {
         display: block; 
     }
@@ -709,6 +674,7 @@ input[type="submit"]:hover {
         white-space: nowrap;
         font-size: 1.8rem;
         line-height: 1.65;
+        font-weight: 700;
     }
     }
 @media screen and (max-width:768px) {
@@ -736,16 +702,13 @@ input[type="submit"]:hover {
     .header-title{
         font-size: 2rem;
         line-height: 1.65;
+        font-weight: 700;
     }
     .nav_content {
         display: none;
     }
     .main {
         width: 100%;
-    }
-    .fv img {
-        width: 100%;
-        display: block;
     }
     .main_copy {
         padding: 18px 20px;
@@ -760,10 +723,12 @@ input[type="submit"]:hover {
         font-size: 2rem;
         margin-bottom: 7px;
         line-height: 1.44;
+        font-weight: 700;
     }
     .main_copy h1 {
         font-size: 3rem;
         line-height: 1.33;
+        font-weight: 700;
     }
     .message {
         padding: 49px 0 39px;
@@ -795,9 +760,6 @@ input[type="submit"]:hover {
         margin-bottom: 43px;
         vertical-align: bottom;
     }
-    .strengths-with-images img {
-        display: block;
-    }
     .strengths-with-images h3 {
         margin: 0;
     }
@@ -818,12 +780,6 @@ input[type="submit"]:hover {
     }
     .strengths-sec-item_image {
         width: 100%;
-    }
-    .strengths-sec-item_image picture img {
-        display: block;
-        margin: 0 auto;
-        width: 100%;
-        max-width: 100%;
     }
     .strengths-sec-item_title {
         width: 100%;
@@ -873,13 +829,6 @@ input[type="submit"]:hover {
         font-weight: 700;
         line-height: 1.5;
     }
-    .service-content img {
-        margin-bottom: 30px;
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        display: block;
-    }
     .service-content p {
         margin-bottom: 39px;
         font-size: 1.6rem;
@@ -904,6 +853,7 @@ input[type="submit"]:hover {
     .news-date {
         font-size: 1.7rem;
         line-height: 1.4;
+        font-weight: 700;
     }
     .news-title {
         margin-top: 2px;
@@ -976,6 +926,7 @@ input[type="submit"]:hover {
     .access-sec-item_tel span {
         line-height: 1.6;
         font-size: 1.6rem;
+        font-weight: 500;
     }
     .access-sec-item_tel a {
         margin-top: 6px;
@@ -989,7 +940,6 @@ input[type="submit"]:hover {
     }
     .access-sec-item span {
         font-size: 1.6rem;
-        line-height: 1.5;
     }
     .access-sec-item_hours {
         margin-top: 14px;
@@ -1056,6 +1006,7 @@ input[type="submit"]:hover {
         color: #fff;
         line-height: 1.3;
         margin-top: 50px;
+        font-weight: 700;
     } 
     input[type="submit"]:hover {
         color: #0D96A0;
