--- a/css/style.css
+++ b/css/style.css
@@ -828,6 +828,7 @@ input[type="submit"]:hover {
         margin-bottom: 7px;
         font-weight: 700;
         line-height: 1.5;
+        margin-top: 30px;
     }
     .service-content p {
         margin-bottom: 39px;
