--- a/css/reset.css
+++ b/css/reset.css
@@ -39,8 +39,8 @@ ol, ul, menu, summary {
 
 /* For images to not be able to exceed their container */
 img {
-  max-inline-size: 100%;
-  max-block-size: 100%;
+  width:100%; 
+  height:auto;
 }
 
 /* removes spacing between cells in tables */
